--- a/index.html
+++ b/index.html
@@ -4,10 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
     <title>Library Information System</title>
 </head>
 <body>
-    
+    <!-- NAVBAR SECTION -->
+    <div class="nav-bar">
+        <div class="nav--company-title-wrapper">
+            <img src="img/main-logo/book-logo.png" alt="An opened book logo" id="nav--company-image">
+            <h2 id="nav--company-title">Clepalla Bookworks &trade;</h2>
+        </div>
+        <div class="nav--links-wrapper">
+            <ul class="nav--links">
+                <li><a href="">Home</a></li>
+                <li><a href="">Books</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact Us</a></li>
+            </ul>
+            <a href="" class="nav--links-user">Log in</a>
+        </div>
+    </div>
 </body>
 </html>
