added main bg image (unfinished)

--- a/index.html
+++ b/index.html
@@ -27,5 +27,13 @@
             <a href="" class="nav--links-user">Log in</a>
         </div>
     </div>
+
+    <!-- HERO SECTION -->
+    <div class="hero">
+        <div class="hero--overlay">
+            <h1 class="hero--main-title">Library Information System</h1>
+            <p class="hero--main-subtitle">We bring what you need.</p>
+        </div>
+    </div>
 </body>
 </html>
