--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
-    <title>Library Information System</title>
+    <title>Library Information System | Home</title>
 </head>
 <body>
     <!-- NAVBAR SECTION -->
@@ -24,7 +24,7 @@
                 <li><a href="">About</a></li>
                 <li><a href="">Contact Us</a></li>
             </ul>
-            <a href="" class="nav--links-user">Log in</a>
+            <a href="./sub-pages/log-in.html" class="nav--links-user">Log in</a>
         </div>
     </div>
 
