Changes in log in and sign up

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <ul class="nav--links">
                 <li><a href="">Home</a></li>
                 <li><a href="">Books</a></li>
+                <li><a href="">Services</a></li>
                 <li><a href="">About</a></li>
-                <li><a href="">Contact Us</a></li>
             </ul>
             <a href="./sub-pages/log-in.html" class="nav--links-user">Log in</a>
         </div>
